--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -39,8 +39,8 @@ jobs:
             echo "command=install" >> $GITHUB_OUTPUT
             exit 0
           elif [ -f "${{ github.workspace }}/package.json" ]; then
-            echo "manager=npx pnpm@7.33.7 install" >> $GITHUB_OUTPUT
-            echo "command=y" >> $GITHUB_OUTPUT
+            echo "manager=npx" >> $GITHUB_OUTPUT
+            echo "command=pnpm@7.33.7 install" >> $GITHUB_OUTPUT
             exit 0
           else
             echo "Unable to determine package manager"
