--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -29,6 +29,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Install
+        run: npm install -g pnpm@7.33.7
       - name: Checkout
         uses: actions/checkout@v4
       - name: Detect package manager
@@ -39,8 +41,8 @@ jobs:
             echo "command=install" >> $GITHUB_OUTPUT
             exit 0
           elif [ -f "${{ github.workspace }}/package.json" ]; then
-            echo "manager=npx" >> $GITHUB_OUTPUT
-            echo "command=pnpm@7.33.7 install" >> $GITHUB_OUTPUT
+            echo "manager=pnpm" >> $GITHUB_OUTPUT
+            echo "command=i" >> $GITHUB_OUTPUT
             exit 0
           else
             echo "Unable to determine package manager"
